src/app/resume/resume.module.scss
.resumeContent {
  display: grid;
  grid-template-rows: auto auto auto;
  grid-template-columns: 1fr;
  padding: 0;
  gap: 2rem;
  margin: 0 auto;
  max-width: var(--content-lg);
}

.sectionHeader h3 {
  padding: 0;
  margin: 0;
}

.resumeItem {
  border-bottom: 2px solid var(--border-1);
  margin-bottom: var(--space-4);
  padding-bottom: var(--space-4);
}

.sectionHeaderText {
  display: inline-block;
  padding: var(--space-2) var(--space-2) 0 0;
  font-size: var(--text-2xl);
  font-weight: var(--weight-black);
}

.experienceSection {
  display: grid;
  gap: var(--space-1);

  h4 {
    font-size: var(--text-lg);
    font-weight: var(--weight-black);
    margin: var(--space-2) 0 0;
    font-family: var(--font-oswald);
    text-transform: uppercase;
  }

  h5 {
    font-weight: var(--weight-regular);
    font-size: var(--text-lg);
    margin: 0;
  }

  h6 {
    font-size: var(--text-2);
    font-weight: var(--weight-regular);
    margin: 0;
  }
}

.sectionContent {
  .honorsSection h5 {
    margin: 0;
    padding: 0;
    font-size: var(--text-lg);
    font-weight: var(--weight-semibold);
  }

  ul {
    padding-left: var(--space-3);
    list-style-type: none;

    &.honorsList {
      margin-top: var(--space-1);
      padding-left: var(--space-2);

      li {
        display: block;
        font-weight: var(--weight-regular);
        font-size: var(--text-lg);
        list-style-type: none;

        span:last-of-type {
          display: block;
          font-weight: var(--weight-regular);
          margin-bottom: var(--space-4);
          margin-left: 1.5rem;
        }

        &::before {
          display: none;
        }

        svg {
          color: var(--color-orange-bg);
          margin-right: var(--space-1);
          vertical-align: text-bottom;
        }
      }
    }

    li {
      display: flex;
      justify-content: flex-start;
      margin-bottom: var(--space-3);
      font-size: var(--text-lg);
      font-weight: var(--weight-regular);
      line-height: 1.25;

      &::before {
        content: "•";
        display: block;
        color: var(--color-accent-500);
        margin-right: var(--space-2);
      }
    }
  }
}

.educationSection {
  display: grid;
  gap: var(--space-1)
}

.skillsSection {
  padding: var(--space-4);
  background-color: var(--surface-3);
  border-radius: var(--radius-3);

  .techSkillsSection {
    display: flex;
    flex-direction: column;

    ul {

      display: grid;
      grid-template-columns: 1fr 1fr 1fr;
      gap: var(--space-2) var(--space-4);
    }
  }

  .softSkillsSection {
    display: flex;
    flex-direction: column;

    ul {
      display: grid;
      grid-template-columns: 1fr 1fr;
      gap: var(--space-2) var(--space-4);
    }
  }

  h3 {
    text-transform: uppercase;
    font-weight: var(--font-regular);

    @media screen and (min-width:  var(--content-md)) {
      text-align: left;
    }
  }
}

